src/components/Footer/index.scss
@import "../../assets/styles/colors.scss";

.footer {
  background: transparent linear-gradient(241deg, $purple 0%, $orange 100%) 0% 0% no-repeat padding-box;
  min-height: 100vh;
  max-width: 100%;
  overflow: hidden;
  padding-top: 120px;
  padding-bottom: 80px;
  padding-left: 19.5%;
  padding-right: 19.5%;
  position: relative;

  &__heading {
    display: flex;
    justify-content: space-between;
    width: 100%;

    h1 {
      font-size: 32px;
      line-height: 36px;
    }

    .stepper {
      position: relative;
      max-width: 565px;
      top: -40px;
    }
  }

  &__content {
    margin-top: 120px;
  }

  &__bottom {
    position: absolute;
    bottom: 80px;
  }
}

@media (max-width: 1039px) {
  .footer {
    padding: 20px;

    &__heading {
      flex-wrap: wrap;
      justify-content: center;

      h1 {
        width: 100%;
        text-align: center;
      }

      .stepper {
        margin-top: 40px;
        margin-left: 0;
        top: 0;

        &__step {
          width: 75px;
        }
      }
    }
  }
}

